# emerald-wallet-state

./: Cargo.toml  README.adoc  crates.md
proto/: addressbook.proto  balance.proto  cache.proto  internal.proto  transactions.proto
src/: access.rs  errors.rs  lib.rs  proto.rs  storage.rs  validate.rs
src/access/: addressbook.rs  allowance.rs  balance.rs  cache.rs  pagination.rs  transactions.rs  transactions_merge.rs  xpubpos.rs
src/proto/: addressbook.rs  balance.rs  cache.rs  internal.rs  transactions.rs
src/storage/: adressbook_store.rs  allowance_store.rs  balance_store.rs  cache_store.rs  indexing.rs  sled_access.rs  transaction_store.rs  trigrams.rs  version.rs  xpubpos_store.rs
tests/: migrate_v1.rs  use_store.rs
