[package]
name = "emerald-wallet-state"
version = "0.1.0"
edition = "2021"
license = "Apache2"

[dependencies]
#emerald-vault = "0.31.0"
#emerald-vault = { path = "../emerald-rs" }
emerald-vault = { git = "https://github.com/emeraldpay/emerald-vault", branch = "master" }

chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
sled = "0.34"
protobuf = { version = "2.25", features = ["with-bytes"] }
enum-display-derive = "0.1"
fs_extra = "1.2"
regex = "1.6"
bitcoin = "~0.28"

[dev-dependencies]
tempdir = "0.3"
hex = "0.4"